
syntax = "proto3";

package ccprotos;

import "tokentx.proto";

message MultiTokenMsg {

	string tokenName = 1;

    oneof tokenMsg {
		SimpleFund fund  = 2;
		QueryToken query = 3;
		Assign     assign = 4;
		BaseToken  init = 5;
	}
}
